fixing content resizing on mobile screens

--- a/styles/index.module.scss
+++ b/styles/index.module.scss
@@ -37,7 +37,10 @@
   display: grid;
   grid-column-gap: 1rem;
   grid-template-columns: repeat(20, 1fr);
-  // grid-template-rows: 50%;
+
+  .articleContainer {
+    padding: .5rem 0;
+  }
 }
 
 .subtext {
@@ -111,6 +114,10 @@
 }
 
 @media only screen and (max-width: 1000px) {
+  .mainContent {
+    grid-template-rows: repeat(3, 1fr);
+  }
+
   .main1h {
     grid-row: 1/3;
     border-bottom: 1px solid var(--main-middle-gray);
@@ -118,6 +125,10 @@
 
   .main1himage {
     grid-column: 6/21;
+  }
+
+  .main2h1 {
+    display: none;
   }
 
   .main2h2 {
@@ -131,4 +142,43 @@
   }
 
 
+}
+
+@media only screen and (max-width: 848px) {
+  .mainContent {
+    grid-template-rows: repeat(4, 1fr);
+  }
+
+  .main1h {
+    grid-row: 1/4;
+  }
+
+  .main1himage {
+    grid-row: 1/3;
+  }
+
+  .main2h1 {
+    display: block;
+    grid-column: 6/21;
+    grid-row: 3;
+  }
+
+  .main2h2, .main3h1, .main3h2 {
+    grid-row: 4;
+  }
+
+}
+
+@media only screen and (max-width: 740px) {
+  .mainContent {
+    display: block;
+  }
+
+  .main2h1 {
+    display: none;
+  }
+
+  .main2h, .main3h1 {
+    border-bottom: 1px solid var(--main-middle-gray);
+  }
 }
